# Predictive-Risk-Assessment-Framework

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: control_catalogue.csv
data/decision_matrices/: approve_supplier_onboarding.json
data/examples/: example_inputs.json
docs/iso/: risk_management_approach.md  scoring_method.md
scripts/: generate_example_outputs.py
src/praf/: init.py
src/praf/asset_risk/: __init__.py  catalogue.py  decision_matrix.py  matrix_builder.py  models.py  outputs.py  readiness.py  scoring.py
src/praf/cli/: main.py
src/praf/config/: defaults.py  init.py  schemas.py
src/praf/domain/: __init__.py  activities.py  categories.py  decision_matrix.py  domains.py  indicators.py  natures.py  risk_patterns.py  user_risk.py
src/praf/engine/: aggregator.py  audit_trail.py  classifier.py  control_planner.py  explainability.py  guidance.py  init.py  pdf_export.py  rules.py  scorer.py  validation.py
src/praf/io/: exporters.py  init.py  loaders.py
tests/: test_classifier.py  test_coverage.py  test_pipeline.py  test_scorer.py  test_validation.py
